--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -29,17 +29,17 @@ $light-danger:#FFE0D6;
 $warning:#F99D3E;
 $light-warning:#FFE4C9;
 
-.bg-dark-blue {
+.bg-brand-dark-blue {
     background-color: $dark-blue;
     color: $dark-blue-text;
 }
 
-.bg-blue {
+.bg-brand-blue {
     background-color: $blue;
     color: $blue-text;
 }
 
-.bg-light-blue {
+.bg-brand-light-blue {
     background-color: $light-blue;
     color: $dark-blue-text;
 }
