updates to login loading state for graceful transitions

--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -43,3 +43,7 @@ $light-warning:#FFE4C9;
     background-color: $light-blue;
     color: $dark-blue-text;
 }
+
+[type=button] {
+    background: inherit;
+}
