updated fetch method

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -12,9 +12,7 @@
   }
 }
 
-body {
+body.root {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  background: #333;
 }
