--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -15,4 +15,25 @@
 body.root {
   color: rgb(var(--foreground-rgb));
   background: #1b1b1b;
+  height: calc(100% + 500px)
+}
+
+
+
+.mobile-menu {
+  background: #ffffff;
+  color: #000;
+  position: absolute;
+  width: calc(100vw + 100px);
+  height: calc(100vh + 100px);
+  top: 0;
+  left: 0;
+  padding: 16px;
+  z-index: 100;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out;
+
+  &.open {
+    transform: translateX(0);
+  }
 }
